introduce a parent POM for Spring Boot projects  (#162)